--- a/index.html
+++ b/index.html
@@ -34,19 +34,9 @@
         }
       }
     </script>
-<script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "recharts": "https://esm.sh/recharts@^3.7.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0"
-  }
-}
-</script>
 </head>
 <body class="bg-bgLight dark:bg-bgDark transition-colors duration-300">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
